src/test/deca/context/valid/provided/test06.deca
class A{
    protected int x;
    void testparam(boolean a, int b, float c){
        if (a){
        println(b);
        }
        else{
        println(c);
        }
    }
}