src/test/deca/context/invalid/provided/double_declare_param.deca
//Resultats :
//Erreur contextuelle
//Ligne 6: x is already used as a param
class A {
  int x = 0;
  void setX(int x, float x) {this.x = x;}
}
